<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:backgroundTint="@null"
    tools:context=".general.WelcomePage">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="4dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="57dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/logo"
            android:layout_toRightOf="@+id/logo"
            android:fontFamily="@font/balootoobold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="15dp"
                android:elevation="8dp"
                android:paddingBottom="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/room"
                    android:fontFamily="@font/balootoobold"
                    android:gravity="center"
                    android:text="@string/room_intro_message"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/round_corner_colour_primary"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp">


                <TextView
                    android:id="@+id/login_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/balootoobold"
                    android:gravity="center_horizontal"
                    android:text="@string/login_signup_message"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_message">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_corner_colour_primary_with_grey_edges"
                        android:fontFamily="@font/balootoosemibold"
                        android:onClick="callLoginPage"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_corner_white"
                        android:fontFamily="@font/balootoosemibold"
                        android:onClick="callSignUpPage"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        app:backgroundTint="@null" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
